more stuff, new images

--- a/appendix2.tex
+++ b/appendix2.tex
@@ -1,5 +1,5 @@
-\chapter{Statistical Analysis Methodology}
-\label{chap:appendix-a}
+\chapter{Composer Model Class Diagram}
+\label{chap:appendix-b}
 
 \begin{figure}[h]
     \centering
