--- a/introduction.tex
+++ b/introduction.tex
@@ -8,8 +8,6 @@
 
 Our society is turning more consumerist, with most people in developed countries having high consumer power and standards of life. Consumers goods, from the essentials up until the entertainment goods, are manufactured and ordered continuously in high quantities.
 
-\todo{pedro: talvez ter uma quote ou dados estatisticos reunidos de algures}
-
 Modern supply chains feel the pressure of this growth, leading to the demand for an efficient management. Most companies are making efforts towards this end, and, even though part of the answer to an efficient management lies in having efficient processes, a good management is also based in using the right technologies. Thus, the development of technologies that can satisfy the demands of supply chain management, for any industry, is in high demand.
 
 %The development of such technologies should be faced towards the problems that supply chains 
@@ -90,9 +88,23 @@ The primary objective of this dissertation is determining if blockchain architec
 
 \section{Dissertation Structure} \label{sec:struct}
 
-Besides the introduction, this dissertation has 4 more chapters. The state of the art is divided into 3 chapters:~\ref{chap:blockchain},~\ref{sec:blockchain-frameworks} e~\ref{chap:blockchain-applicability}.
+Besides the introduction, this dissertation has 6 more chapters, divided into 2 parts.
 
-In the Chapter~\ref{chap:blockchain}, some important Blockchain concepts are introduced, which are crucial to understanding the rest of the content. In the Chapter~\ref{sec:blockchain-frameworks}, the most relevant Blockchain development platforms are described, such as Ethereum and Hyperledger Fabric. In the chapter ~\ref{chap:blockchain-applicability}, the advantages and disadvantages of applying blockchain technologies to supply chain are discussed, and some related works are shown. Still in this chapter, some important design decisions are also presented.
+\par \textbf{Part 1: Background and State of the Art} - Provides the needed concepts to understanding the work, as well as explanations about the existing tools and projects related to the blockchain and to its application to supply chain management domain.
+ The state of the art is divided into 2 chapters:~\ref{chap:blockchain} and ~\ref{chap:blockchain-applicability}.
+\begin{itemize}
+  \item Chapter~\ref{chap:blockchain}, "Blockchain Technologies", some important concepts from the blockchain architecture are presented and discussed, followed by an analysis of the existing blockchain networks and frameworks and their comparison.
+  \item Chapter~\ref{chap:blockchain-applicability}, "Blockchain in the Industry", the application of blockchain to supply chain is discussed in more detail, including the possible advantages, challenges, and following it up with an analysis of the existing blockchain applications that also focus on supply chain. 
+\end{itemize}
 
-The last chapter,~\ref{chap:conclusions}, describes the future work, along with some of the metrics that will be used to evaluate this work. It also explains what the expected results will be.
+\par \textbf{Part 2: Problem, Research and Solution} - Provides a thourough explanation of the problem, objectives and the proposed methodology to approach them. Follows up with a survey and requirements analysis, which serves as a base to propose a blockchain solution design. 
+\begin{itemize}
+  \item Chapter~\ref{chap:supply-chain-problems}, "Problem Statement", specifies the thesis statement and the questions that need to be answered in order to reach a conclusion.
+  \item Chapter~\ref{chap:survey}, "Supply Chain Issues Validation and Requirements Elicitation", features a survey and the analysis of its results, such as to gather the requirements for a supply chain system, so that a blockchain-based solution can be proposed.
+  \item Chapter~\ref{chap:prototype}, "Solution Design and Implementation", features the choice of a blockchain framework and the proposal of a solution, which consists in building a proof-of-concept project that implements the requirements elicited from the survey.
+\end{itemize}
 
+\par \textbf{Part 3: Conclusion} - Gathers all the information from the results of the solution to make a statement, also listing contributions, difficulties and future work.
+\begin{itemize}
+  \item Chapter~\ref{chap:conclusions}, "Conclusions", features an overview of the work done in the dissertation, providing an answer to the previously defined problem, and following it up with possibilities of future work in this area.
+\end{itemize}
