--- a/problemstatement.tex
+++ b/problemstatement.tex
@@ -88,14 +88,14 @@ In the end, all the questions end up being answered and it is possible to reach 
 % To test the thesis, we will divide the work in 2 parts: survey and prototype;
 To answer these questions from Section~\ref{subsec:thesis-statement}, the work of this dissertation was divided into two main parts, each of them comprising a chapter:
 \begin{enumerate}
-\item \textbf{Survey Research - Supply Chain Issues Validation and Requirements Elicitation}
-\item \textbf{Research Validation - Design and Implementation of a Prototype}
+\item \textbf{Supply Chain Issues Validation and Requirements Elicitation}
+\item \textbf{Solution Design and Implementation}
 \end{enumerate}
 
 % Each one focuses on supporting a specific part of the thesis statement;
 Each of these focuses on reaching a conclusion towards the answers that underlie the thesis statement.
 
-\subsection{Survey Research - Supply Chain Issues Validation And Requirements Elicitation}
+\subsection{Supply Chain Issues Validation And Requirements Elicitation}
 \label{sec:survey-approach}
 % The survey will serve to support "..." and take conclusions about whether "..."
 The first question to answer in order to reach any conclusion is \textbf{\textit{"What supply chain issues, improvements and requirements do the experts really find the most important?"}}. As already mentioned, the other questions depend on the answers that we reach for this question.
@@ -117,7 +117,7 @@ The survey was distributed over the internet, through relevant media and social 
 
 In conclusion, the goal of the survey is to validate some assumptions and direct the dissertation towards the most important supply chain management problems.
 
-\subsection{Research Validation - Design and Implementation of a Prototype}
+\subsection{Solution Design and Implementation}
 % The prototype will serve to support "...", along with the requirements that were written based on the background research and literature review; (do i have to rewrite part of the requirements?) 
 
 This section is focused on applying the knowledge of which are the most important aspects of supply chain to focus on improving, to answer the other two final questions: \textbf{\textit{"What is the Blockchain tool or framework most adequate to the development of an architecture that can support these requirements?"}} and 
