--- a/prototype.tex
+++ b/prototype.tex
@@ -1,4 +1,6 @@
-\chapter{Research Validation - Design and Implementation of a Prototype}
+\chapter{Solution Design and Implementation}
+%Research Validation - Design and Implementation of a Prototype
+
 \label{chap:prototype}
 \minitoc \mtcskip \noindent 
 
