--- a/prototype/prototypeconclusion.tex
+++ b/prototype/prototypeconclusion.tex
@@ -1,4 +1,4 @@
-\section{Summary}
+\section{Conclusions}
 
 %Answer to the final question:
 The whole chapter focused on building a list of requirements, designing a system, implementing it and validating the work done. All to answer the question: \textit{"Is it possible to build a feasible architectural design, by using such a tool, to implement all these requirements?"}.
