--- a/survey.tex
+++ b/survey.tex
@@ -1,4 +1,4 @@
-\chapter{Survey Research - Supply Chain Issues Validation and Requirements Elicitation}
+\chapter{Supply Chain Issues Validation and Requirements Elicitation}
 \label{chap:survey}
 \minitoc \mtcskip \noindent
 \input{survey/surveyintro.tex}
@@ -6,4 +6,5 @@
 \input{survey/survey2.tex}
 \input{survey/survey3.tex}
 \input{survey/survey4.tex}
+\input{survey/survey5.tex}
 \input{survey/surveyconclusion.tex}
