--- a/survey/survey1.tex
+++ b/survey/survey1.tex
@@ -1,8 +1,6 @@
 \section{Results}
 
-%TODO: mencionar que vai estar nos anexos o inquerito completo? (se der para la por)
-
-The results of the survey are analyzed in this chapter. Each group of questions features the graphs and metrics of the corresponding questions, and a brief informal analysis is done, based on the values.
+The results of the survey are analyzed in this chapter~\footnote{The results are available at:\url{https://drive.google.com/file/d/1Zyg8BGj0dV6KFKPZdshgbYHYi-m8snGX/view?usp=sharing}}. Each group of questions features the graphs and metrics of the corresponding questions, and a brief informal analysis is done, based on the values.
 
 
 \subsection{Question Group 1 - General Information and Participant Classification}
@@ -24,13 +22,13 @@ The results of the survey are analyzed in this chapter. Each group of questions 
 \begin{figure}[ht]
     %\makebox[2pt]{}
 
-    \resfig{sc_role}{Relation to Supply Chain}
-    \resfig{sc_industry}{Industry}
+    \resfig{survey_group1/sc_role}{Relation to Supply Chain}
+    \resfig{survey_group1/sc_industry}{Industry}
 
-    \resfig{sc_experience}{Years of experience}
-    \resfig{nr_employees}{Number of employees in company}
+    \resfig{survey_group1/sc_experience}{Years of experience}
+    \resfig{survey_group1/nr_employees}{Number of employees in company}
 
-      \caption{Role, Industry, Years of Experience and Company Size}
+      \caption{Questions about the respondent's Role, Industry, Years of Experience and Company Size.}
     \label{fig:group1_graphics}
 \end{figure}
 
