--- a/survey/survey2.tex
+++ b/survey/survey2.tex
@@ -7,8 +7,8 @@ This section features some questions that inquire about the respondent's knowled
  %GRAFICO BLOCKCHAIN KNOWLEDGE
  \begin{figure}[h]
 \centering
-\includegraphics[scale=0.65]{media/blockchain_knowledge.png}
-\caption["Blockchain knowledge."]{Blockchain knowledge.}
+\includegraphics[scale=0.65]{media/survey_group2/blockchain_knowledge.pdf}
+\caption{Question about Blockchain knowledge.}
 \label{fig:blockchain_knowledge}
 \end{figure}
 
@@ -31,12 +31,12 @@ After inquiring about the blockchain knowledge of the respondents, some affirmat
 
 Independently, these affirmations do not hold an absolute value that can help ascertain if there is a need for a cryptocurrency in the case of supply chain. But together, the three affirmations lead to a higher degree of certainty.
 
-The first affirmation states that a blockchain, any at all, independently of the purpose or type, does indeed need a cryptocurrency. The second affirmation goes on a tangent from the first one, stating that maybe cryptocurrencies are only needed as an incentive, and otherwise could be not needed. The final affirmation is more generic in nature, and attempts to \textbf{completely separate the concept of blockchain and cryptocurrency}. The results for each affirmation can be found in Figure~\ref{fig:blockchain_crypto_opinions} and in Table~\ref{table:blockchain_crypto_opinions}.
-
+The first affirmation states that a blockchain, any at all, independently of the purpose or type, does indeed need a cryptocurrency. The second affirmation goes on a tangent from the first one, stating that maybe cryptocurrencies are only needed as an incentive, and otherwise could be not needed. The final affirmation is more generic in nature, and attempts to \textbf{completely separate the concept of blockchain and cryptocurrency}. The results for each affirmation can be found in Figure~\ref{fig:blockchain_crypto_opinions}. %and in Table~\ref{table:blockchain_crypto_opinions}.
+\todo{pedro: where is the table???}
 \begin{figure}[h]
 \centering
-\includegraphics[scale=0.60]{media/blockchain_crypto_opinions.png}
-\caption[Rate the affirmations about the use of cryptocurrencies in the blockchain]{Rate the affirmations about the use of cryptocurrencies in the blockchain}
+\includegraphics[scale=1]{media/survey_group2/blockchain_crypto_opinions.pdf}
+\caption{Question to rate affirmations about the use of cryptocurrencies in the blockchain.}
 \label{fig:blockchain_crypto_opinions}
 \end{figure}
 
