--- a/survey/survey4.tex
+++ b/survey/survey4.tex
@@ -1,5 +1,5 @@
 
-\subsection{Question Group 4 - Supply Chain Standalone Points of Improvement and Blockchain+SC points of Applicability and Improvement}
+\subsection{Question Group 4 - Supply Chain Standalone Points of Improvement and Blockchain points of Applicability and Improvement for Supply Chain}
 \label{sec-survey-improvement-functionalities}
 
 The first goal for this part of the survey is to find out the points of improvement for supply chain. What is being questioned are not the issues of the supply chain themselves, which were already asked, but what parts of supply chain, even though they may already work well, could work even better.
@@ -29,8 +29,8 @@ Therefore, the following classification for the lists of results will be adopted
 
 \begin{figure}[h]
 \centering
-\includegraphics[scale=0.35]{media/importance_SC_improvement_points.png}
-\caption["Rank the importance of some aspects which Supply Chains aim to improve."]{"Rank the importance of some aspects which Supply Chains aim to improve."}
+\includegraphics[scale=0.60]{media/survey_group4/importance_SC_improvement_points.pdf}
+\caption{Question: "Rank the importance of some aspects which Supply Chains aim to improve."}
 \label{fig:importance_SC_improvement_points}
 \end{figure}
 
@@ -91,8 +91,8 @@ The importance ranking described as before follows below:
 
 \begin{figure}[h]
 \centering
-\includegraphics[scale=0.28]{media/importance_SC_info_systems.png}
-\caption["Rank the importance of some functionalities in a supply chain based information system."]{"Rank the importance of some functionalities in a supply chain based information system."}
+\includegraphics[scale=0.60]{media/survey_group4/importance_SC_info_systems.pdf}
+\caption{Question: "Rank the importance of some functionalities in a supply chain based information system."}
 \label{fig:importance_SC_info_systems}
 \end{figure}
 
@@ -151,13 +151,13 @@ The importance ranking described as before follows below:
 
 The final important group of questions featured 2 questions about the viability of applying blockchain to the supply chain. The first question asked people which use cases they thought were the best for applying blockchain to the supply chain and respondents could select a maximum of 3 options (including "None" or "Do not know").
 
-\begin{figure}[ht]
+\begin{figure}[h]
     %\makebox[2pt]{}
 
-	\resfig{blockchain_usecases_sc}{Blockchain use cases for the supply chain}
-    \resfig{blockchain_application_benefits}{Blockchain benefits for the supply chain}
+	\resfig{survey_group4/blockchain_usecases_sc}{Blockchain use cases for the supply chain}
+    \resfig{survey_group4/blockchain_application_benefits}{Blockchain benefits for the supply chain}
     
-      \caption{Blockchain use cases and benefits for the supply chain.}
+      \caption{Question: Blockchain use cases and benefits for the supply chain.}
     \label{fig:group4_graphics}
 \end{figure}
 
