--- a/thesis.tex
+++ b/thesis.tex
@@ -122,8 +122,8 @@
 	\mainmatter
 
 	%CONTENT
-	\todo{pedro: introducao + structure}
-	\todo{pedro: abstract precisa de ser revisto de maneira a sumariar bem todo o conteúdo da tese}
+	\todo{pedro: resumo em portugues}
+	\todo{pedro: dedicatoria e quote}
 	
 	%TABLES:
 	\todo{pedro: compor captions das tabelas, por em cima e com nome correto}
@@ -131,9 +131,8 @@
 	\todo{pedro: por so 2 casas decimais nas tabelas}
 
 	%SURVEY
-	\todo{pedro: compor imagens dos graficos}
-	\todo{pedro: corrigir localizacoes das figuras}
-	\todo{pedro: captions das questions na survey, compor para terem QUESTION}
+	%pedro: compor imagens dos graficos}
+	%pedro: corrigir localizacoes das figuras}
 	\todo{pedro: passar tabela estatistica para anexo}
 
 	%TEXT CONSISTENCY, GRAMMAR CHECKS AND GENERAL WRITING
@@ -143,6 +142,7 @@
 	%EXTRA FORMATTING
 	\todo{pedro: ter os anexos}
 	\todo{pedro: ter glossario e/ou abreviacoes}
+	\todo{pedro: conteudo da capa em ingles}
 	
 
 	%\subsection*{2. Naming Conventions and Definitions}
@@ -151,9 +151,6 @@
 	%	\par PoC - Proof of Concept
 	%	\par SLA - Service Level Agreement
 	%	\par Other glossary terms, acronyms and whatever.
-		
-     %   \subsection*{3. Relevant Facts and Assumptions}
-	%	\par N/A - Random stuff that is not put anywhere else, basically
 
 	% final lineup
     \include{introduction}
@@ -170,11 +167,11 @@
 
     %\bookmarksetup{startatroot}
 	%\phantomsection
-	%\addcontentsline{toc}{part}{\appendixtocname}
-	%\appendixpage
-	%\appendix
-		%\include{appendix1}
-		%\include{appendix2}
+	\addcontentsline{toc}{part}{\appendixtocname}
+	\appendixpage
+	\appendix
+		\include{appendix1}
+		\include{appendix2}
 
 
 
@@ -216,5 +213,5 @@
 		\cleardoublepage
 		\phantomsection
 		\addcontentsline{toc}{chapter}{Index}
-		\printindex
+		%\printindex
 \end{document}
