--- a/00-abstract.tex
+++ b/00-abstract.tex
@@ -9,13 +9,13 @@ Managing inventory and suppliers while maintaining safety, quality and keeping t
 Provenance and traceability of a supply chain are a big objective for companies, along with improving security, efficiency and effectiveness. Most of these issues are, in great part, caused by the use of inadequate processes or even of inadequate software, which, traditionally, is centralized and often difficult to extend. The software used is also prone to synchronization problems, leading to big delays in both relaying the information and resources and making payments possible. 
 
 % Solution
-One way to approach these specific problems of supply chains is to update or extend the IT with new infrastructures, namely by using blockchain technology. Blockchain is a decentralized technology that has no single point of failure and allows for the immutable storage of verifiable data all over the computers that store it. With blockchain, information is stored sequentially and any piece of information, since the genesis of the chain is accessible anytime, anywhere. As such, blockchains are the perfect means to achieve traceability of a supply chain. At the same time they are a secure and incorruptible way to store information, with a fast synchronization time. It would also be the way to close the analog gaps, turning the chain fully digital and automated, leading to the possibility of a global overview.
+One way to approach these specific problems of supply chains is to prioritize them and update the supporting technologies with an updated architecture that can focus on these problems. One such technology that might be able to handle all the requirements that these problems elicite is the blockchain distributed architecture. Blockchain is a decentralized technology that has no single point of failure and allows for the immutable storage of verifiable data all over the computers that store it. With blockchain, information is stored sequentially and any piece of information, since the genesis of the chain is accessible anytime, anywhere. As such, blockchains might be the adequade mean to achieve traceability of a supply chain. At the same time they are a secure and incorruptible way to store information, with a fast synchronization time. This technology could possible lead the way to turning the chain fully digital and automated, closing the analog gaps and possibly achieving a more global overview of products and processes.
 
-This project focuses on researching whether the application of  blockchain technology to a supply chain is beneficial, to which extent, and what is needed to achieve this. It should be possible to ascertain how much this technology can really impact SCM over the traditional IT solutions, or in combination with them. A practical instance involving the application of this technology to a system will also be developed, to further demonstrate its possible benefits. In the end, the system will be analyzed against a system without blockchain both quantitatively, using performance metrics, as well as qualitatively, by checking which new functionalities were added.
+This dissertation focuses on researching the extent of the issues of supply chain management, and to what extent blockchain could be applied in a beneficial way to solve these issues. To this end, a survey was conducted to elicit the most important issues and requirements for a supply chain, leading to the design and implementation of a blockchain architecture, aiming to test whether the proposed design can successfully implement the requirements. Thus, in the end, the implemented system will be analyzed against the elicited requirements, in order to verify the degree to which it was possible to implement them.
 
-The improvements that it could bring are, however, not limited to the problems described. Blockchain brings many other possibilities into the table, in many other areas than just supply chain.
+The improvements that this technology could bring are, however, not limited to the problems described elicited. Blockchain brings many other possibilities into the table, in many other areas than just supply chain.
 
-\textbf{Keywords:} Supply Chain, Supply Chain Management, Industry, Blockchain, Network, Decentralization, Security, Traceability, Provenance, Information Integration, Ledger, Interoperability
+\textbf{Keywords:} Supply Chain, Supply Chain Management, Industry, Requirements, Supply Chain Issues, Supply Chain Improvement, Blockchain, Network, Decentralization, Security, Traceability, Provenance, Information Integration, Ledger, Interoperability, Auditing
 
 
 %\chapter{Resumo}
